# python-project-1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
brain_games/: cli.py  engine.py  game_even.py  welcome.py
brain_games/games/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py
