[tool.poetry]
name = "brain-games"
version = "1.4.0"
description = "First study project at hexlet.io"
authors = ["Ivan Neivan <justgodshot@gmail.com>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prog = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"